--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -49,14 +49,14 @@
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-interest menuitem">
                                 <a class="hvr-glow hvr-sweep-to-bottom" href="interests.html"><i class="fa fa-users"
-                                        aria-hidden="true"></i><span>Interests</span></a>
+                                        aria-hidden="true"></i><span>Certifications</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a class="hvr-glow hvr-sweep-to-bottom" href="github.html"><i class="fa fa-github"
+                                <a class="hvr-glow hvr-sweep-to-bottom" href="github.html"><i class="fa-brands fa-github"
                                         aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a class="hvr-glow hvr-sweep-to-bottom" href="assets/cv/sample-cv.pdf"
+                                <a class="hvr-glow hvr-sweep-to-bottom" href="assets/cv/Dmytro Martynenko_CV_NI.pdf"
                                     target="_blank"><i class="fa fa-download"
                                         aria-hidden="true"></i><span>Download</span></a>
                             </li>
@@ -97,14 +97,13 @@
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
-                <p class="inline-block">Full Stack Web Developer. Skilled in everything from HTML to Heroku.
-                    The capacity for structural and design thinking.</p>
+                <p class="inline-block">I approach every project with a blend of curiosity, analytical thinking, and a results-driven mindset.</p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.</p>
-                <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                <a href="assets/cv/Dmytro Martynenko_CV_NI.pdf" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download link.</span>
                 </a>
@@ -113,27 +112,21 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.instagram.com/dmytro_martynenko/">
+                            <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.facebook.com/dimitri.martinenko.5/">
+                            <i class="fa-brands fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.linkedin.com/in/dmytro-martynenko-fullstack/">
+                            <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">Linkedin</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                 </ul>
