--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -42,14 +42,14 @@
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-interest menuitem">
                                 <a class="hvr-glow hvr-sweep-to-bottom" href="interests.html"><i class="fa fa-users"
-                                        aria-hidden="true"></i><span>Interests</span></a>
+                                        aria-hidden="true"></i><span>Certifications</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a class="hvr-glow hvr-sweep-to-bottom" href="github.html"><i class="fa fa-github"
+                                <a class="hvr-glow hvr-sweep-to-bottom" href="github.html"><i class="fa-brands fa-github"
                                         aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a class="hvr-glow hvr-sweep-to-bottom" href="assets/cv/sample-cv.pdf"
+                                <a class="hvr-glow hvr-sweep-to-bottom" href="assets/cv/Dmytro Martynenko_CV_NI.pdf"
                                     target="_blank"><i class="fa fa-download"
                                         aria-hidden="true"></i><span>Download</span></a>
                             </li>
@@ -122,7 +122,7 @@
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">About me</h3>
+                        <h3 class="contact-heading uppercase text-center">About me</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -133,9 +133,9 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
-                                <p>I'm a skilled Full Stack Developer with a wealth of diverse
-                                    life and technical experience that I bring to every project.
-                                </p>
+                                <p class="text-justify">I am a passionate and skilled Full Stack Software Developer with a comprehensive
+                                    background in both front-end and back-end technologies. My expertise includes:
+                                    </p>
                             </div>
                         </div>
                     </div>
@@ -146,9 +146,8 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
-                                <p>I follow form as well as function. I know that the aesthetics of effective
-                                    design combined with application speed, security and reliability combine to create a
-                                    great user experience.
+                                <p class="text-justify">I approach every project with a blend of curiosity, analytical thinking, and a
+                                    results-driven mindset.
                                 </p>
                             </div>
                         </div>
@@ -156,14 +155,14 @@
                     <div class="col-10 offset-1 offset-sm-0  col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-bolt" aria-hiddent="true"></i>
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
-                                <p>I work quickly and effectively in getting things built and working across the stack.
-                                    I'm an excellent
-                                    communicator who thrives in bright and enthusiastic teams and I'm also a self
-                                    starter when working solo.
+                                <p class="text-justify">Transitioning from high-performance swimming coaching to technology, I bring a unique
+                                    perspective, unwavering dedication, and a results-driven mindset to every project.
+                                    My proactive approach and commitment to excellence ensure that I consistently
+                                    contribute to enhancing the performance and security of any organisation I join.
                                 </p>
                             </div>
                         </div>
@@ -180,14 +179,13 @@
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
-                <p class="inline-block">Full Stack Web Developer. Skilled in everything from HTML to Heroku.
-                    The capacity for structural and design thinking.</p>
+                <p class="inline-block">I approach every project with a blend of curiosity, analytical thinking, and a results-driven mindset.</p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.</p>
-                <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                <a href="assets/cv/Dmytro Martynenko_CV_NI.pdf" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download link.</span>
                 </a>
@@ -196,27 +194,21 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.instagram.com/dmytro_martynenko/">
+                            <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.facebook.com/dimitri.martinenko.5/">
+                            <i class="fa-brands fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.linkedin.com/in/dmytro-martynenko-fullstack/">
+                            <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">Linkedin</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                 </ul>
