--- a/interests.html
+++ b/interests.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
         type="text/css" />
@@ -46,14 +46,14 @@
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-interest menuitem">
                                 <a class="hvr-glow hvr-sweep-to-bottom" href="interests.html"><i class="fa fa-users"
-                                        aria-hidden="true"></i><span>Interests</span></a>
+                                        aria-hidden="true"></i><span>Certifications</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a class="hvr-glow hvr-sweep-to-bottom" href="github.html"><i class="fa fa-github"
+                                <a class="hvr-glow hvr-sweep-to-bottom" href="github.html"><i class="fa-brands fa-github"
                                         aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a class="hvr-glow hvr-sweep-to-bottom" href="assets/cv/sample-cv.pdf"
+                                <a class="hvr-glow hvr-sweep-to-bottom" href="assets/cv/Dmytro Martynenko_CV_NI.pdf"
                                     target="_blank"><i class="fa fa-download"
                                         aria-hidden="true"></i><span>Download</span></a>
                             </li>
@@ -64,118 +64,56 @@
             </div>
         </div>
     </header>
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-md-4 bg-color-conferences section-column">
-                <div class="row">
-                    <div class="col-12">
-                        <h3 class="section-heading uppercase">
-                            Conferences And Meetups Attended
-                        </h3>
-                    </div>
+
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3 class="contact-heading uppercase text-center">Certifications and achievements</h3>
                 </div>
-                <div id="map"></div>
             </div>
-            <div class="col-md-8 bg-color-groups">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">My Groups And Societies</h3>
+            <div class="row">
+                <div class="col-12 col-md-6 my-5">
+                    <div class="text-center">
+                        <h4 class="three-reasons-heading uppercase">Full-Stack Development</h4>
+                        <img class="img-fluid my-3" src="assets/img/Captura de ecrã 2024-05-19 170416.png" alt="Full-Stack Development">
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Coding Grace</h4>
-                                <p>
-                                    Coding Grace are a group of developers based in Ireland who love to code and do
-                                    other geeky and not necessarily crafty activities. Some of us code full-time, or
-                                    just for fun (or both). We have people who are part of other technical user groups
-                                    such as
-                                    Dublin ALT.NET, GameCraft, Python Ireland, Ruby Ireland and more.
-                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a>
-                                </p>
-                            </div>
-                        </div>
+                <div class="col-12 col-md-6 my-5">
+                    <div class="text-center">
+                        <h4 class="three-reasons-heading uppercase">Cybersecurity Training</h4>
+                        <img class="img-fluid my-3" src="assets/img/Captura de ecrã 2024-05-19 170319.png" alt="Cybersecurity Training">
                     </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Django Girls</h4>
-                                <p>
-                                    Django Girls is a non-profit organization and a community that empowers and helps
-                                    women to organize free, one-day programming workshops by providing tools, resources
-                                    and support. We are a volunteer run organization with hundreds of people
-                                    contributing
-                                    to bring more amazing women into the world of technology.
-                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a>
-                                </p>
-                            </div>
-                        </div>
+                </div>
+                <div class="col-12 col-md-6 my-5">
+                    <div class="text-center">
+                        <h4 class="three-reasons-heading uppercase">(B.sc) Sports Science Degree</h4>
+                        <img class="img-fluid my-3" src="assets/img/Captura de ecrã 2024-05-19 172456.png" alt="">
                     </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">Full Stack NY</h4>
-                                <p>
-                                    Our meetup is an event where web designers and developers can come together to learn
-                                    from and teach each other about emerging technologies. While speakers at Full Stack
-                                    focus primarily on angularjs, react, node, hapiJS, espress, plain ole' JavaScript,
-                                    HTML, and CSS, we encourage all local web professionals to join us for vivid
-                                    discussions around technology across the stack in any language.
-                                    <a href="https://www.meetup.com/javascript-full-stack-development/"
-                                        target="_blank">Full Stack NY</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
-                        <div class="row">
-                            <div class="col-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
-                            </div>
-                            <div class="col-10">
-                                <h4 class="three-reasons-heading uppercase">IoT Nation</h4>
-                                <p>
-                                    IoT Nation's mission is to inspire, engage, and connect entrepreneurs, investors,
-                                    professionals, & enthusiasts worldwide who are active in the Internet of Things
-                                    (IoT). This group is for professionals and enthusiasts in the Internet of Things. We
-                                    welcome
-                                    those who want to learn about this emerging field which is fascinating as IoT makes
-                                    use of a diverse range of technologies and has the promise to impact a vast number
-                                    of vertical markets.
-                                    <a href="https://www.meetup.com/NYCIOT/" target="_blank">IoT Nation</a>
-                                </p>
-                            </div>
-                        </div>
+                </div>
+                <div class="col-12 col-md-6 my-5">
+                    <div class="text-center">
+                        <h4 class="three-reasons-heading uppercase">Coaching Athletes for World Cup</h4>
+                        <img class="img-fluid my-3" src="assets/img/Captura de ecrã 2024-05-19 172824.png" alt="">
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and
-                    design thinking.
+                    I approach every project with a blend of curiosity, analytical thinking, and a results-driven mindset.
                 </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/Dmytro Martynenko_CV_NI.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
@@ -185,39 +123,21 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.instagram.com/dmytro_martynenko/">
+                            <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">YouTube</span>
+                        <a target="_blank" href="https://www.facebook.com/dimitri.martinenko.5/">
+                            <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="https://www.linkedin.com/in/dmytro-martynenko-fullstack/">
+                            <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">Linkedin</span>
                         </a>
                     </li>
                 </ul>
