--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -42,14 +42,14 @@
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-interest menuitem">
                                 <a class="hvr-glow hvr-sweep-to-bottom" href="interests.html"><i class="fa fa-users"
-                                        aria-hidden="true"></i><span>Interests</span></a>
+                                        aria-hidden="true"></i><span>Certifications</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
-                                <a class="hvr-glow hvr-sweep-to-bottom" href="github.html"><i class="fa fa-github"
+                                <a class="hvr-glow hvr-sweep-to-bottom" href="github.html"><i class="fa-brands fa-github"
                                         aria-hidden="true"></i><span>GitHub</span></a>
                             </li>
                             <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
-                                <a class="hvr-glow hvr-sweep-to-bottom" href="assets/cv/sample-cv.pdf"
+                                <a class="hvr-glow hvr-sweep-to-bottom" href="assets/cv/Dmytro Martynenko_CV_NI.pdf"
                                     target="_blank"><i class="fa fa-download"
                                         aria-hidden="true"></i><span>Download</span></a>
                             </li>
@@ -70,94 +70,102 @@
                     </div>
                 </div>
                 <div class="history-items">
-                    <div class="timeline-item" data-dates="10/20016 - 8/2018">
-                        <h4>Escola Superior de Rio Maior</h4>
-                        <p>Sports Science</p>
-                    </div>
-                    <div class="timeline-item" data-dates="10/2018 - 10/2019">
-                        <h4>Deutsche Sporthochschule Koeln</h4>
-                        <p>Sports Science</p>
-                    </div>
-                    <div class="timeline-item" data-dates="10/2019 - 08/2020">
-                        <h4>Kopfsprung Koeln</h4>
-                        <p>Assistant Swimming Coach</p>
+                    <div class="timeline-item" data-dates="09/2022 - 07/2023">
+                        <h4>Code Institute</h4>
+                        <p>Full Stack Developer Student</p>
                     </div>
                     <div class="timeline-item" data-dates="09/2020 - 09/2022">
                         <h4>TSV Solingen</h4>
                         <p>Head Swimming Coach</p>
                     </div>
-                    <div class="timeline-item" data-dates="09/2022 - 07/2023">
-                        <h4>Code Institute</h4>
-                        <p>Full Stack Developer Student</p>
+                    <div class="timeline-item" data-dates="10/2019 - 08/2020">
+                        <h4>Kopfsprung Cologne</h4>
+                        <p>Assistant Swimming Coach</p>
+                    </div>
+                    <div class="timeline-item" data-dates="10/2018 - 10/2019">
+                        <h4>German Sports University</h4>
+                        <p>High-Performance Swimming</p>
+                    </div>
+                    <div class="timeline-item" data-dates="10/20016 - 8/2018">
+                        <h4>Sports University Rio Maior</h4>
+                        <p>Sports Science</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons">
                 <div class="row">
                     <div class="col">
-                        <h3 class="section-heading uppercase">My Skills</h3>
+                        <h3 class="contact-heading uppercase text-center">My Skills</h3>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6 py-3">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-tv" aria-hiddent="true"></i>
+                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
-                                <p>I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I
-                                    also have extensive experience in Front End Frameworks such as Angular and React
+                                <p>Proficient in HTML, CSS, and JavaScript to create
+                                    dynamic, responsive, and user-friendly web interfaces.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6 py-3">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fa fa-gears" aria-hiddent="true"></i>
+                                <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
-                                <p>I specialize in data-driven web applications. Many of my projects utilise
-                                    document-based data. I use Python and Django in conjunction with MongoDB to
-                                    process and present information.
+                                <p>Experienced with Python, databases, and APIs, ensuring
+                                    robust and efficient server-side functionality.
                                 </p>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row progress-section">
-                    <div class="col">
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
-                                aria-valuemax="100" style="width:90%;"><span class="progress-type">HTML /
-                                    HTML5</span>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6 py-3">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa-solid fa-shield" aria-hidden="true"></i>
                             </div>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="93" aria-valuemin="0"
-                                aria-valuemax="100" style="width:93%;"><span class="progress-type">CSS / CSS3</span>
-                            </div>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                aria-valuemax="100" style="width:70%;"><span class="progress-type">JavaScript /
-                                    jQuery</span>
-                            </div>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                                aria-valuemax="100" style="width:75%;"><span class="progress-type">Django /
-                                    Python</span>
-                            </div>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                aria-valuemax="100" style="width:70%;"><span class="progress-type">SQL / NoSQL</span>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Data Security and Communication</h4>
+                                <p>Currently enhancing my knowledge in
+                                    cybersecurity and preparing for the CompTIA Security+ certification, aiming to
+                                    secure data and communications effectively.
+                                </p>
                             </div>
                         </div>
                     </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6 py-3">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa-solid fa-network-wired" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Collaboration and Communication</h4>
+                                <p>Excelling in teamwork and open communication to
+                                    align with the project's goals and stakeholders' expectations.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6 py-3">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="three-reasons-icon fa-solid fa-graduation-cap" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Continuous Learning</h4>
+                                <p>Staying updated with the latest industry trends and technologies
+                                    to bring innovative ideas and solutions to the table.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -174,7 +182,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.</p>
-                <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
+                <a href="assets/cv/Dmytro Martynenko_CV_NI.pdf" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download link.</span>
                 </a>
@@ -183,31 +191,24 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.instagram.com/dmytro_martynenko/">
+                            <i class="fa-brands fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.facebook.com/dimitri.martinenko.5/">
+                            <i class="fa-brands fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        <a target="_blank" href="https://www.linkedin.com/in/dmytro-martynenko-fullstack/">
+                            <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">Linkedin</span>
                         </a>
                     </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
                 </ul>
-
             </div>
         </div>
 
